force-app/main/default/objects/User_Stories__c/User_Stories__c.object-meta.xml
<CustomObject>
    <label>User Stories</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Stories Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>