force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>