force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Developer__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>