force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Efforts__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Efforts__c</fullName>
    <inlineHelpText>Actual efforts spent - in hours</inlineHelpText>
    <label>Efforts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>