force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_ETA__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_ETA__c</fullName>
    <label>ETA</label>
    <type>Date</type>
</CustomField>