force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Priority__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>