force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Stories (Reviewer)</relationshipLabel>
    <relationshipName>User_Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>