force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Sign_off__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Sign_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign-off</label>
    <type>Checkbox</type>
</CustomField>