force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Solution_Notes__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Solution_Notes__c</fullName>
    <label>Solution Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>