force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Sprint__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Sprint__c</fullName>
    <label>Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>