force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Story_Points__c</fullName>
    <inlineHelpText>1 - Less than 2hrs |
2 - Half a day |
3 - Up to two days |
5 - Few days |
8 - Around a week |
13 - More than a week</inlineHelpText>
    <label>Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>