force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Summary__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>