force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Title__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>