force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_Type__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>