force-app/main/default/objects/User_Stories__c/fields/ESC_NBC_User_Story_Details__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_User_Story_Details__c</fullName>
    <label>User Story Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>