force-app/main/default/objects/User_Stories__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ESC_NBC_Title__c</columns>
    <columns>ESC_NBC_Efforts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ESC_NBC_Priority__c</field>
        <operation>equals</operation>
        <value>P0,P1,P2</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/6/2025 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>